--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "brandeis_saa",
   "version": "1.0.0",
-  "description": "Students & Alumni Association Website",
+  "description": "Students & Alumni Association Website (BUSAA)",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,6 +22,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^7.0.3",
     "passport": "^0.6.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local-mongoose": "^8.0.0",
+    "rand-token": "^1.0.1",
+    "socket.io": "^4.6.1"
   }
 }
